fixed auto zoom on mobile

--- a/bomberman.css
+++ b/bomberman.css
@@ -399,7 +399,7 @@ footer {
   }
 
   .help-bubble {
-    bottom: 550px;
+    bottom: 520px;
   }
   .instructions-para {
     font-size: 0.4rem;
@@ -408,5 +408,11 @@ footer {
     font-size: 0.5rem;
     padding: 10px;
     margin-bottom: 10px;
+  }
+  #upButton,
+  #leftButton,
+  #rightButton,
+  #downButton {
+    touch-action: manipulation;
   }
 }
